[tool.poetry]
name = "oatmessenger"
version = "0.1.0"
description = "A fast and simple web messenger"
authors = ["Stanislav Zmiev <szmiev2000@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.78.0"}
typer = {extras = ["all"], version = "^0.4.1"}
sqlmodel = {extras = ["all"], version = "^0.0.6"}
more-itertools = "^8.13.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
